Workaround gjs single-include issue

gjs features single-include guards for the headers in gjs/ with
gjs/gjs-module.h being the only header you are supposed to include.

Unfortunately, the headers in gi/ (which do not appear to have their own
master include file) individually include files from gjs/.

We can workaround the issue by first #include <gjs/gjs-module.h> which
will skip the single-include guard on the files the second time they get
included (from the headers in gi/).

https://bugzilla.gnome.org/show_bug.cgi?id=688617